--- a/index.html
+++ b/index.html
@@ -228,16 +228,22 @@
 		<!--<button ng-click="demo.dismissLast()">Dismiss last</button>-->
 		<!--<button ng-click="demo.dismissAll()">Dismiss all</button>-->
 
-		<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-sanitize.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-animate.min.js"></script>
+		<!-- bower:js -->
+		<script src="bower_components/angular/angular.js"></script>
+		<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+		<script src="bower_components/angular-animate/angular-animate.js"></script>
+		<script src="bower_components/angular-mocks/angular-mocks.js"></script>
+		<script src="bower_components/angular-scenario/angular-scenario.js"></script>
+		<!-- endbower -->
 
 		<!-- Module Specific scripts -->
-		<script src="src/nMessages.module.js"></script>
-		<script src="src/nMessages.provider.js"></script>
-		<script src="src/nMessages.wrapper.directive.js"></script>
-		<script src="src/nMessages.message.directive.js"></script>
+		<!--<script src="src/nMessages.module.js"></script>-->
+		<!--<script src="src/nMessages.provider.js"></script>-->
+		<!--<script src="src/nMessages.wrapper.directive.js"></script>-->
+		<!--<script src="src/nMessages.message.directive.js"></script>-->
+
+		<!-- Test Dist -->
+		<script src="dist/nMessages.js"></script>
 
 		<!-- Demo functionality -->
 		<script>
