--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="dist/nMessages.css">
+		<!-- bower:css -->
+		<!-- endbower -->
 	</head>
 	<body ng-app="demoApp" ng-controller="demoCtrl as demo">
 
