--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="dist/nMessages.css">
-		<!-- bower:css -->
-		<!-- endbower -->
 	</head>
 	<body ng-app="demoApp" ng-controller="demoCtrl as demo">
 
@@ -231,11 +229,17 @@
 		<!--<button ng-click="demo.dismissAll()">Dismiss all</button>-->
 
 		<!-- bower:js -->
+		<script src="bower_components/modernizr/modernizr.js"></script>
+		<script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
-		<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-		<script src="bower_components/angular-animate/angular-animate.js"></script>
 		<script src="bower_components/angular-mocks/angular-mocks.js"></script>
 		<script src="bower_components/angular-scenario/angular-scenario.js"></script>
+		<script src="bower_components/angular-animate/angular-animate.js"></script>
+		<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+		<script src="bower_components/fastclick/lib/fastclick.js"></script>
+		<script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
+		<script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
+		<script src="bower_components/foundation/js/foundation.js"></script>
 		<!-- endbower -->
 
 		<!-- Module Specific scripts -->
