everything must be absolute

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,8 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
         <!--<link rel="stylesheet" href="dist/nMessages.css">-->
-        <link rel="stylesheet" href="nMessages.css">
+        <!--<link rel="stylesheet" href="nMessages.css">-->
+        <link rel="stylesheet" href="https://rawgit.com/nodes-galactic/nMessages/demo-test/demo/nMessages.css"/>
 	</head>
 	<body ng-app="demoApp" ng-controller="demoCtrl as demo">
 
@@ -260,7 +261,7 @@
 		<!--<script src="src/nMessages.message.directive.js"></script>-->
 
 		<!-- Test Dist -->
-		<script src="nMessages.js"></script>
+		<script src="https://rawgit.com/nodes-galactic/nMessages/demo-test/demo/nMessages.css"></script>
 
 		<!-- Demo functionality -->
 		<script>
