--- a/src/nMessages.message.template.html
+++ b/src/nMessages.message.template.html
@@ -1,10 +1,10 @@
 <div class="nodes-messages__message {{ctrl.message.type}}">
     
-    <a class="nodes-messages__close-button"
+    <a class="nodes-messages__close-button close-button"
        data-close
        ng-if="ctrl.message.dismissButton"
        ng-bind-html="ctrl.message.dismissButtonHtml"
-       ng-click="!ctrl.message.dismissOnClick && dismiss(ctrl.message.id)" ></a>
+       ng-click="!ctrl.message.dismissOnClick && dismiss(ctrl.message.id)"></a>
     
     <span class="nodes-messages__content">{{ctrl.message.content}}</span>
 </div>
